--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
 plotly==5.1.0
 streamlit==1.7.0
 git+https://github.com/NoahHenrikKleinschmidt/eco_helper@master#egg=eco_helper
+alive_progress==2.4.1
+tqdm==4.46.0
+gseapy==0.12.1
+matplotlib==3.5.2
+nbformat==5.4.0
+numpy==1.23.1
+pandas==1.3.5
+plotly==5.10.0
+PyYAML==6.0
+qpcr==4.0.0
+scipy==1.9.0
+seaborn==0.11.2
+setuptools==58.0.4
