add darkmode changing logo

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ scipy==1.9.0
 seaborn==0.11.2
 setuptools==58.0.4
 git+https://github.com/NoahHenrikKleinschmidt/eco_helper@master#egg=eco_helper
+darkdetect==0.7.1
